--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc": "1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^2.1.2",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9"
   },
