Added redux router

--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
+    "history": "^4.7.2",
     "include-all": "^1.0.0",
     "path": "^0.12.7",
     "rc": "1.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-materialize": "^2.1.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9"
   },
